fix : favicon not showing in some pages , total price is not updating in the checkout page

--- a/static/tailwind/output.css
+++ b/static/tailwind/output.css
@@ -920,10 +920,6 @@ video {
   width: 3rem;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
 .w-20 {
   width: 5rem;
 }
